--- a/config/dev.yaml
+++ b/config/dev.yaml
@@ -1,3 +1,8 @@
 application:
   baseUrl: "127.0.0.1"
   port: "8080"
+  database_host: "127.0.0.1"
+  database_port: "3306"
+  database_user: "test"
+  database_password: "123456"
+  database_name: "shorturl"
