--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "axios": "^0.27.2",
     "framer-motion": "^6",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-hook-form": "^7.31.1",
+    "sweetalert2": "^11.4.14"
   },
   "devDependencies": {
     "@types/node": "^17.0.31",
