--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11",
     "axios": "^0.27.2",
     "framer-motion": "^6",
+    "qrcode.react": "^3.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.31.1",
