--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "NODE_ENV=development vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11",
     "axios": "^0.27.2",
     "framer-motion": "^6",
+    "js-yaml": "^4.1.0",
     "qrcode.react": "^3.0.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
